--- a/Index.html
+++ b/Index.html
@@ -44,7 +44,7 @@ header img {
 
 <div class="content">
     <h2>¿Qué es JavaScript?</h2>
-    <p>JavaScript es un lenguaje de programación interpretado que se utiliza principalmente para crear páginas web interactivas. A menudo se utiliza junto con HTML y CSS para mejorar la funcionalidad y la apariencia de los sitios web.</p>
+    <p>JavaScript es un lenguaje de programación</p>
 
     <h2>Características principales de JavaScript:</h2>
     <ul>
