--- a/Index.html
+++ b/Index.html
@@ -55,7 +55,7 @@ header img {
         <li>Es compatible con múltiples navegadores web.</li>
     </ul>
 
-    <h2>Beneficios de JavaScript:</h2>
+    <h2>Beneficios</h2>
     <ul>
         <li>Facilita la creación de interacciones dinámicas en una página web.</li>
         <li>Mejora la experiencia del usuario mediante la creación de interfaces interactivas.</li>
